apollo-federation/src/connectors/json_selection/snapshots/spread_parsing_spread_spread_a_sub_b.snap
---
source: apollo-federation/src/connectors/json_selection/parser.rs
expression: "selection!(\"...a{b}\", spec)"
---
JSONSelection {
    inner: Named(
        SubSelection {
            selections: [
                NamedSelection {
                    prefix: Spread(
                        Some(
                            0..3,
                        ),
                    ),
                    path: WithRange {
                        node: Path(
                            PathSelection {
                                path: WithRange {
                                    node: Key(
                                        WithRange {
                                            node: Field(
                                                "a",
                                            ),
                                            range: Some(
                                                3..4,
                                            ),
                                        },
                                        WithRange {
                                            node: Selection(
                                                SubSelection {
                                                    selections: [
                                                        NamedSelection {
                                                            prefix: None,
                                                            path: WithRange {
                                                                node: Path(
                                                                    PathSelection {
                                                                        path: WithRange {
                                                                            node: Key(
                                                                                WithRange {
                                                                                    node: Field(
                                                                                        "b",
                                                                                    ),
                                                                                    range: Some(
                                                                                        5..6,
                                                                                    ),
                                                                                },
                                                                                WithRange {
                                                                                    node: Empty,
                                                                                    range: Some(
                                                                                        6..6,
                                                                                    ),
                                                                                },
                                                                            ),
                                                                            range: Some(
                                                                                5..6,
                                                                            ),
                                                                        },
                                                                    },
                                                                ),
                                                                range: Some(
                                                                    5..6,
                                                                ),
                                                            },
                                                        },
                                                    ],
                                                    range: Some(
                                                        4..7,
                                                    ),
                                                },
                                            ),
                                            range: Some(
                                                4..7,
                                            ),
                                        },
                                    ),
                                    range: Some(
                                        3..7,
                                    ),
                                },
                            },
                        ),
                        range: Some(
                            3..7,
                        ),
                    },
                },
            ],
            range: Some(
                0..7,
            ),
        },
    ),
    spec: V0_4,
}
